# confit-lite

./: .gitignore  README.md  config.toml  flake.nix  pyproject.toml
clients/vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
clients/vscode/src/: extension.ts
src/confit_lite/: factories.py
src/confit_lsp/: descriptor.py  main.py  registry.py
src/confit_lsp/lsp/: main.py
src/confit_lsp/parsers/: toml.py
