[project]
name = "confit-lite"
version = "0.1.0"
description = "A light confit implementation with a built-in LSP!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["confit>=0.10.1", "pydantic>=2.12.5"]

[project.optional-dependencies]
lsp = ["persil", "pygls>=2.0.0", "rtoml>=0.13.0"]

[project.scripts]
confit-lsp = "confit_lite.lsp.main:run"

[project.entry-points.'confit']
factories = "confit_lite.factories"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
persil = { git = "https://github.com/bdura/persil" }
